1.4
	+ Bug fix: do not crash if asterisk is not available to fetch info
1.3.17
	+ UI change for eBox VoIP
	+ Disable ilbc codec for external provider
1.3.16
	+ Bug fix: create /var/run/asterisk in upstart script
1.3.15
	+ Fixes migration adding Queues OU
	+ Write asterisk configuration file as asterisk:asterisk
1.3.14
	+ Add call parking (extension 700 and above)
	+ URI dialing has been deleted
	+ Music on Hold for meetings and parking (testing on extension 400)
	+ Add queues support mapped to user groups
	+ Updated LDAP schemas to follow upstream changes
	+ Bugfix: incoming calls from SIP provider go to selected extension
	+ Add call logs
	+ Bugfix: old voicemail extension is deleted from dialplan
	+ Deleted IAX and IAX2 port from firewall as we are not using it
	+ Add call transfer and recording
1.3.13
	+ Change menu name to keep folder open
	+ Add AsteriskUser model to be used in users and groups default user
	  template. Admins can select if they wish to enable the asterisk
	  account by default when creating new users.
1.3.12
	+ Bugfix: usercorner model precondition to avoid show voicemail
	screen when the user has not voip account
	+ Add page titles
1.3.6
	+ Bugfix: module tried to show modules when disabled, raising error
1.1.20
	+ Voicemail settings in user corner
	+ New release
1.1.10
	+ Initial release
